<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">My First App</string>
    <string name="edit_message">Enter a message</string>
    <string name="button_send">Send</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_display_message">My Message</string>
    <string name="hello_world">Hello world!</string>
	<string name="action_search">Search</string>
	<string name="txt_latitude">Latitude:</string>
	<string name="txt_longitude">Longitude:</string>
	<string name="txt_speed">Speed:</string>
	<string name="txt_mph"> MPH</string>
</resources>
